AntlrScript/CompilerInSwift/PlayScriptParser.swift
// Generated from PlayScript.g4 by ANTLR 4.13.1

package play;

import Antlr4

open class PlayScriptParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = PlayScriptParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(PlayScriptParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, BOOLEAN = 1, BREAK = 2, BYTE = 3, CASE = 4, CATCH = 5, 
                 CHAR = 6, CLASS = 7, CONST = 8, CONTINUE = 9, DEFAULT = 10, 
                 DO = 11, DOUBLE = 12, ELSE = 13, ENUM = 14, EXTENDS = 15, 
                 FINAL = 16, FINALLY = 17, FLOAT = 18, FOR = 19, IF = 20, 
                 IMPLEMENTS = 21, IMPORT = 22, INSTANCEOF = 23, INT = 24, 
                 INTERFACE = 25, LONG = 26, NATIVE = 27, NEW = 28, PACKAGE = 29, 
                 PRIVATE = 30, PROTECTED = 31, PUBLIC = 32, RETURN = 33, 
                 SHORT = 34, SUPER = 35, SWITCH = 36, THIS = 37, VOID = 38, 
                 WHILE = 39, IntegerLiteral = 40, FloatingPointLiteral = 41, 
                 BooleanLiteral = 42, CharacterLiteral = 43, StringLiteral = 44, 
                 NullLiteral = 45, LPAREN = 46, RPAREN = 47, LBRACE = 48, 
                 RBRACE = 49, LBRACK = 50, RBRACK = 51, SEMI = 52, COMMA = 53, 
                 DOT = 54, ELLIPSIS = 55, AT = 56, COLONCOLON = 57, ASSIGN = 58, 
                 GT = 59, LT = 60, BANG = 61, TILDE = 62, QUESTION = 63, 
                 COLON = 64, ARROW = 65, EQUAL = 66, LE = 67, GE = 68, NOTEQUAL = 69, 
                 AND = 70, OR = 71, INC = 72, DEC = 73, ADD = 74, SUB = 75, 
                 MUL = 76, DIV = 77, BITAND = 78, BITOR = 79, CARET = 80, 
                 MOD = 81, ADD_ASSIGN = 82, SUB_ASSIGN = 83, MUL_ASSIGN = 84, 
                 DIV_ASSIGN = 85, AND_ASSIGN = 86, OR_ASSIGN = 87, XOR_ASSIGN = 88, 
                 MOD_ASSIGN = 89, LSHIFT_ASSIGN = 90, RSHIFT_ASSIGN = 91, 
                 URSHIFT_ASSIGN = 92, Identifier = 93, WS = 94, COMMENT = 95, 
                 LINE_COMMENT = 96, IDENTIFIER = 97, THROWS = 98, CHAR_LITERAL = 99, 
                 STRING_LITERAL = 100, BOOL_LITERAL = 101, NULL_LITERAL = 102, 
                 DECIMAL_LITERAL = 103, HEX_LITERAL = 104, OCT_LITERAL = 105, 
                 BINARY_LITERAL = 106, FLOAT_LITERAL = 107, HEX_FLOAT_LITERAL = 108, 
                 FUNCTION = 109, STRING = 110
	}

	public
	static let RULE_classDeclaration = 0, RULE_classBody = 1, RULE_classBodyDeclaration = 2, 
            RULE_memberDeclaration = 3, RULE_functionDeclaration = 4, RULE_functionBody = 5, 
            RULE_typeTypeOrVoid = 6, RULE_qualifiedNameList = 7, RULE_formalParameters = 8, 
            RULE_formalParameterList = 9, RULE_formalParameter = 10, RULE_lastFormalParameter = 11, 
            RULE_variableModifier = 12, RULE_qualifiedName = 13, RULE_fieldDeclaration = 14, 
            RULE_constructorDeclaration = 15, RULE_variableDeclarators = 16, 
            RULE_variableDeclarator = 17, RULE_variableDeclaratorId = 18, 
            RULE_variableInitializer = 19, RULE_arrayInitializer = 20, RULE_classOrInterfaceType = 21, 
            RULE_typeArgument = 22, RULE_literal = 23, RULE_integerLiteral = 24, 
            RULE_floatLiteral = 25, RULE_prog = 26, RULE_block = 27, RULE_blockStatements = 28, 
            RULE_blockStatement = 29, RULE_statement = 30, RULE_switchBlockStatementGroup = 31, 
            RULE_switchLabel = 32, RULE_forControl = 33, RULE_forInit = 34, 
            RULE_enhancedForControl = 35, RULE_parExpression = 36, RULE_expressionList = 37, 
            RULE_functionCall = 38, RULE_expression = 39, RULE_primary = 40, 
            RULE_typeList = 41, RULE_typeType = 42, RULE_functionType = 43, 
            RULE_primitiveType = 44, RULE_creator = 45, RULE_superSuffix = 46, 
            RULE_arguments = 47

	public
	static let ruleNames: [String] = [
		"classDeclaration", "classBody", "classBodyDeclaration", "memberDeclaration", 
		"functionDeclaration", "functionBody", "typeTypeOrVoid", "qualifiedNameList", 
		"formalParameters", "formalParameterList", "formalParameter", "lastFormalParameter", 
		"variableModifier", "qualifiedName", "fieldDeclaration", "constructorDeclaration", 
		"variableDeclarators", "variableDeclarator", "variableDeclaratorId", "variableInitializer", 
		"arrayInitializer", "classOrInterfaceType", "typeArgument", "literal", 
		"integerLiteral", "floatLiteral", "prog", "block", "blockStatements", 
		"blockStatement", "statement", "switchBlockStatementGroup", "switchLabel", 
		"forControl", "forInit", "enhancedForControl", "parExpression", "expressionList", 
		"functionCall", "expression", "primary", "typeList", "typeType", "functionType", 
		"primitiveType", "creator", "superSuffix", "arguments"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'boolean'", "'break'", "'byte'", "'case'", "'catch'", "'char'", 
		"'class'", "'const'", "'continue'", "'default'", "'do'", "'double'", "'else'", 
		"'enum'", "'extends'", "'final'", "'finally'", "'float'", "'for'", "'if'", 
		"'implements'", "'import'", "'instanceof'", "'int'", "'interface'", "'long'", 
		"'native'", "'new'", "'package'", "'private'", "'protected'", "'public'", 
		"'return'", "'short'", "'super'", "'switch'", "'this'", "'void'", "'while'", 
		nil, nil, nil, nil, nil, "'null'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "';'", "','", "'.'", "'...'", "'@'", "'::'", "'='", "'>'", "'<'", 
		"'!'", "'~'", "'?'", "':'", "'->'", "'=='", "'<='", "'>='", "'!='", "'&&'", 
		"'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", 
		"'%'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", 
		"'<<='", "'>>='", "'>>>='"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH", "CHAR", "CLASS", "CONST", 
		"CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTENDS", "FINAL", 
		"FINALLY", "FLOAT", "FOR", "IF", "IMPLEMENTS", "IMPORT", "INSTANCEOF", 
		"INT", "INTERFACE", "LONG", "NATIVE", "NEW", "PACKAGE", "PRIVATE", "PROTECTED", 
		"PUBLIC", "RETURN", "SHORT", "SUPER", "SWITCH", "THIS", "VOID", "WHILE", 
		"IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", "CharacterLiteral", 
		"StringLiteral", "NullLiteral", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ELLIPSIS", "AT", "COLONCOLON", 
		"ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "ARROW", "EQUAL", 
		"LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", 
		"DIV", "BITAND", "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
		"MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", 
		"LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "Identifier", "WS", 
		"COMMENT", "LINE_COMMENT", "IDENTIFIER", "THROWS", "CHAR_LITERAL", "STRING_LITERAL", 
		"BOOL_LITERAL", "NULL_LITERAL", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", 
		"BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", "FUNCTION", "STRING"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "PlayScript.g4" }

	override open
	func getRuleNames() -> [String] { return PlayScriptParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return PlayScriptParser._serializedATN }

	override open
	func getATN() -> ATN { return PlayScriptParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return PlayScriptParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,PlayScriptParser._ATN,PlayScriptParser._decisionToDFA, PlayScriptParser._sharedContextCache)
	}


	public class ClassDeclarationContext: ParserRuleContext {
			open
			func CLASS() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.CLASS.rawValue, 0)
			}
			open
			func IDENTIFIER() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.IDENTIFIER.rawValue, 0)
			}
			open
			func classBody() -> ClassBodyContext? {
				return getRuleContext(ClassBodyContext.self, 0)
			}
			open
			func EXTENDS() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.EXTENDS.rawValue, 0)
			}
			open
			func typeType() -> TypeTypeContext? {
				return getRuleContext(TypeTypeContext.self, 0)
			}
			open
			func IMPLEMENTS() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.IMPLEMENTS.rawValue, 0)
			}
			open
			func typeList() -> TypeListContext? {
				return getRuleContext(TypeListContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PlayScriptParser.RULE_classDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.enterClassDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.exitClassDeclaration(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? PlayScriptVisitor {
			    return visitor.visitClassDeclaration(self)
			}
			else if let visitor = visitor as? PlayScriptBaseVisitor {
			    return visitor.visitClassDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func classDeclaration() throws -> ClassDeclarationContext {
		var _localctx: ClassDeclarationContext
		_localctx = ClassDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 0, PlayScriptParser.RULE_classDeclaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(96)
		 	try match(PlayScriptParser.Tokens.CLASS.rawValue)
		 	setState(97)
		 	try match(PlayScriptParser.Tokens.IDENTIFIER.rawValue)
		 	setState(100)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == PlayScriptParser.Tokens.EXTENDS.rawValue) {
		 		setState(98)
		 		try match(PlayScriptParser.Tokens.EXTENDS.rawValue)
		 		setState(99)
		 		try typeType()

		 	}

		 	setState(104)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == PlayScriptParser.Tokens.IMPLEMENTS.rawValue) {
		 		setState(102)
		 		try match(PlayScriptParser.Tokens.IMPLEMENTS.rawValue)
		 		setState(103)
		 		try typeList()

		 	}

		 	setState(106)
		 	try classBody()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ClassBodyContext: ParserRuleContext {
			open
			func LBRACE() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.LBRACE.rawValue, 0)
			}
			open
			func RBRACE() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.RBRACE.rawValue, 0)
			}
			open
			func classBodyDeclaration() -> [ClassBodyDeclarationContext] {
				return getRuleContexts(ClassBodyDeclarationContext.self)
			}
			open
			func classBodyDeclaration(_ i: Int) -> ClassBodyDeclarationContext? {
				return getRuleContext(ClassBodyDeclarationContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return PlayScriptParser.RULE_classBody
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.enterClassBody(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.exitClassBody(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? PlayScriptVisitor {
			    return visitor.visitClassBody(self)
			}
			else if let visitor = visitor as? PlayScriptBaseVisitor {
			    return visitor.visitClassBody(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func classBody() throws -> ClassBodyContext {
		var _localctx: ClassBodyContext
		_localctx = ClassBodyContext(_ctx, getState())
		try enterRule(_localctx, 2, PlayScriptParser.RULE_classBody)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(108)
		 	try match(PlayScriptParser.Tokens.LBRACE.rawValue)
		 	setState(112)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 4503891769299146) != 0) || ((Int64((_la - 97)) & ~0x3f) == 0 && ((Int64(1) << (_la - 97)) & 12289) != 0)) {
		 		setState(109)
		 		try classBodyDeclaration()


		 		setState(114)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(115)
		 	try match(PlayScriptParser.Tokens.RBRACE.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ClassBodyDeclarationContext: ParserRuleContext {
			open
			func SEMI() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.SEMI.rawValue, 0)
			}
			open
			func memberDeclaration() -> MemberDeclarationContext? {
				return getRuleContext(MemberDeclarationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PlayScriptParser.RULE_classBodyDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.enterClassBodyDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.exitClassBodyDeclaration(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? PlayScriptVisitor {
			    return visitor.visitClassBodyDeclaration(self)
			}
			else if let visitor = visitor as? PlayScriptBaseVisitor {
			    return visitor.visitClassBodyDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func classBodyDeclaration() throws -> ClassBodyDeclarationContext {
		var _localctx: ClassBodyDeclarationContext
		_localctx = ClassBodyDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 4, PlayScriptParser.RULE_classBodyDeclaration)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(119)
		 	try _errHandler.sync(self)
		 	switch (PlayScriptParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .SEMI:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(117)
		 		try match(PlayScriptParser.Tokens.SEMI.rawValue)

		 		break
		 	case .BOOLEAN:fallthrough
		 	case .BYTE:fallthrough
		 	case .CHAR:fallthrough
		 	case .CLASS:fallthrough
		 	case .DOUBLE:fallthrough
		 	case .FLOAT:fallthrough
		 	case .INT:fallthrough
		 	case .LONG:fallthrough
		 	case .SHORT:fallthrough
		 	case .VOID:fallthrough
		 	case .IDENTIFIER:fallthrough
		 	case .FUNCTION:fallthrough
		 	case .STRING:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(118)
		 		try memberDeclaration()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class MemberDeclarationContext: ParserRuleContext {
			open
			func functionDeclaration() -> FunctionDeclarationContext? {
				return getRuleContext(FunctionDeclarationContext.self, 0)
			}
			open
			func fieldDeclaration() -> FieldDeclarationContext? {
				return getRuleContext(FieldDeclarationContext.self, 0)
			}
			open
			func classDeclaration() -> ClassDeclarationContext? {
				return getRuleContext(ClassDeclarationContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PlayScriptParser.RULE_memberDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.enterMemberDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.exitMemberDeclaration(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? PlayScriptVisitor {
			    return visitor.visitMemberDeclaration(self)
			}
			else if let visitor = visitor as? PlayScriptBaseVisitor {
			    return visitor.visitMemberDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func memberDeclaration() throws -> MemberDeclarationContext {
		var _localctx: MemberDeclarationContext
		_localctx = MemberDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 6, PlayScriptParser.RULE_memberDeclaration)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(124)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,4, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(121)
		 		try functionDeclaration()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(122)
		 		try fieldDeclaration()

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(123)
		 		try classDeclaration()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionDeclarationContext: ParserRuleContext {
			open
			func IDENTIFIER() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.IDENTIFIER.rawValue, 0)
			}
			open
			func formalParameters() -> FormalParametersContext? {
				return getRuleContext(FormalParametersContext.self, 0)
			}
			open
			func functionBody() -> FunctionBodyContext? {
				return getRuleContext(FunctionBodyContext.self, 0)
			}
			open
			func typeTypeOrVoid() -> TypeTypeOrVoidContext? {
				return getRuleContext(TypeTypeOrVoidContext.self, 0)
			}
			open
			func LBRACK() -> [TerminalNode] {
				return getTokens(PlayScriptParser.Tokens.LBRACK.rawValue)
			}
			open
			func LBRACK(_ i:Int) -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.LBRACK.rawValue, i)
			}
			open
			func RBRACK() -> [TerminalNode] {
				return getTokens(PlayScriptParser.Tokens.RBRACK.rawValue)
			}
			open
			func RBRACK(_ i:Int) -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.RBRACK.rawValue, i)
			}
			open
			func THROWS() -> TerminalNode? {
				return getToken(PlayScriptParser.Tokens.THROWS.rawValue, 0)
			}
			open
			func qualifiedNameList() -> QualifiedNameListContext? {
				return getRuleContext(QualifiedNameListContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PlayScriptParser.RULE_functionDeclaration
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.enterFunctionDeclaration(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PlayScriptListener {
				listener.exitFunctionDeclaration(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? PlayScriptVisitor {
			    return visitor.visitFunctionDeclaration(self)
			}
			else if let visitor = visitor as? PlayScriptBaseVisitor {
			    return visitor.visitFunctionDeclaration(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func functionDeclaration() throws -> FunctionDeclarationContext {
		var _localctx: FunctionDeclarationContext
		_localctx = FunctionDeclarationContext(_ctx, getState())
		try enterRule(_localctx, 8, PlayScriptParser.RULE_functionDeclaration)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(127)
		 	try _errHandler.sync(self)
		 	switch (try getInterpreter().adaptivePredict(_input,5,_ctx)) {
		 	case 1:
		 		setState(126)
		 		try typeTypeOrVoid()

		 		break
		 	default: break
		 	}
		 	setState(129)
		 	try match(PlayScriptParser.Tokens.IDENTIFIER.rawValue)
		 	setState(130)
		 	try formalParameters()
		 	setState(135)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == PlayScriptParser.Tokens.LBRACK.rawValue) {
		 		setState(131)
		 		try match(PlayScriptParser.Tokens.LBRACK.rawValue)
		 		setState(132)
		 		try match(PlayScriptParser.Tokens.RBRACK.rawValue)


		 		setState(137)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(140)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == PlayScriptParser.Tokens.THROWS.rawValue) {
		 		setState(138)
		 		try match(PlayScriptParser.Tokens.THROWS.rawValue)
		 		setState(139)
		 		try qualifiedNameList()

		 	}

		 	setState(142)
		 	try functionBody()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
